# UniformToDataGenerator

./: README.md  pyproject.toml  setup.cfg
src/u2dg/: sample.py  train.py
u2dg/: sample.py  test.py  train.py
