[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "u2dg"
version = "2024.09.22"
dependencies = [
  "torch",
  "tqdm",
  "numpy",
]
requires-python = ">=3.8"
authors = [
  {name = "Daniil Hayrapetyan"},
]
maintainers = [
  {name = "Brett Cannon", email = "brett@example.com"}
]
description = ""
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["ML", "Generative AI"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
#gui = ["PyQt5"]
cli = [
  "rich",
  "click",
]

#[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
#Repository = "https://github.com/me/spam.git"
#"Bug Tracker" = "https://github.com/me/spam/issues"
#Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
#
#[project.scripts]
#spam-cli = "spam:main_cli"

#[project.gui-scripts]
#spam-gui = "spam:main_gui"
#
#[project.entry-points."spam.magical"]
#tomatoes = "spam:main_tomatoes"