[metadata]
name = u2dg
version = attr: u2dg.VERSION
author = Daniil Hayrapetyan
description = This tool allows to
long_description = file: README.md
keywords = ML, generative, point cloud
;license = MIT
classifiers =
    Framework :: numpy, torch
    Programming Language :: Python :: 3


[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:python_requires = >=3.8
install_requires =
    requests
;    importlib-metadata; python_version<"3.10"

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.rst
hello = *.msg

;[options.entry_points]
;console_scripts =
;    executable-name = u2dg.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
